# LiteMark

./: .eslintignore  .gitattributes  .gitignore  .prettierignore  .stylelintignore  .stylelintrc.cjs  AGENTS.md  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  index.html  markdown格式测试.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
docs/: FAQ.md  Markdown重构设计.md  开发指南.md  开发规范.md  性能与Rust迁移报告.md  架构说明.md  现状扫描.md  组件迁移清单.md  迁移说明.md  重构路线图.md
scripts/: check-docs.mjs  check-version.mjs
src/: App.css  App.tsx  app.rs  document.rs  index.css  main.rs  main.tsx  persistence.rs  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: dialog.json  opener.json  store.json  window.json
src-tauri/icons/: icon.ai  icon.icns
src-tauri/src/: document_storage.rs  lib.rs  main.rs
src/components/: index.ts
src/components/Editor/: Editor.module.css  Editor.tsx  EditorImpl.tsx
src/components/KeyboardShortcuts/: KeyboardShortcuts.tsx
src/components/Layout/: Layout.module.css  Layout.tsx
src/components/Preview/: Preview.css  Preview.module.css  Preview.test.tsx  Preview.tsx
src/components/RecentFilesSidebar/: RecentFilesSidebar.module.css  RecentFilesSidebar.test.tsx  RecentFilesSidebar.tsx
src/components/Settings/: Settings.module.css  Settings.tsx
src/components/SettingsButton/: SettingsButton.module.css  SettingsButton.tsx
src/components/Toolbar/: Toolbar.module.css  Toolbar.tsx  toolbarUtils.ts
src/components/WindowControls/: WindowControls.module.css  WindowControls.test.tsx  WindowControls.tsx
src/hooks/: index.ts  useDebouncedValue.ts  useMarkdownStats.ts  useScrollSync.ts  useTheme.ts  useToggle.ts
src/lib/: md.ts
src/locales/: config.ts  context.ts  index.tsx
src/locales/en/: common.ts
src/locales/ja/: common.ts  index.ts
src/locales/zh-CN/: common.ts
src/modules/documentSession/: tauriDocumentSession.ts  useDocumentSession.test.tsx  useDocumentSession.ts
src/modules/markdownEditing/: applyMarkdownTransform.test.ts  applyMarkdownTransform.ts  configureMonaco.test.ts  configureMonaco.ts  markdownTransforms.ts  taskList.ts  (+1 more)
src/types/: editor.d.ts  keyboardShortcuts.d.ts  markdown-editor.d.ts  preview.d.ts  recentFiles.d.ts  settings.d.ts  toolbar.d.ts  utils.d.ts
src/utils/: recentStore.ts  themeStore.ts  workDirStore.ts
(+17 files in other folders)
