[package]
name = "litemark"
version = "0.2.0"
edition = "2021"
description = "A lightweight native Markdown editor"
license = "MIT"

[dependencies]
eframe = { version = "0.35.0", features = ["persistence"] }
egui_commonmark = "0.24.0"
rfd = "0.15.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

