[package]
name = "LtieMark"
version = "0.1.6"
description = "editor for markdown"
authors = ["PTSFDTZ pitousanfadetuzi@gmail.com"]
edition = "2021"
license = "MIT"

[lib]
name = "tauri_get_start_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"  # 添加对话框插件
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
md5 = "0.7"
