[package]
name = "litemark"
version = "2.0.0"
description = "editor for markdown"
authors = ["PTSFDTZ pitousanfadetuzi@gmail.com"]
edition = "2021"
license = "MIT"

[lib]
name = "litemark_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
tauri = { version = "2.9.1", features = ["protocol-asset"] }
tauri-plugin-dialog = "2.5.0"  # 添加对话框插件
tauri-plugin-store = "2.4.2"
serde = { version = "1", features = ["derive"] }
tempfile = "3"
tauri-plugin-opener = "=2.5.3"

[target.'cfg(unix)'.dependencies]
rustix = { version = "1.1.2", features = ["fs"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.1", features = ["Win32_Storage_FileSystem"] }

[dev-dependencies]
serde_json = "1"
